2004-04-03  Samúel Jón Gunnarsson  <sammi@techattack.nu>

	is.po:  Added "is" to ALL_LINGUAS
	
2004-03-31  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "af" to ALL_LINGUAS.

2004-03-22  Paolo Borelli  <pborelli@katamail.com>

	* configure.in: 
	* README: bump version to 2.6.0

	* NEWS: updated

2004-03-19  Gareth Owen  <gowen72@yahoo.com>

	* configure.in: Added en_GB to ALL_LINGUAS

2004-03-18  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "mr" for Marathi to ALL_LINGUAS.

2004-03-17  Glynn Foster  <glynn.foster@sun.com>

	* help/*: Add back localized documentation from Sun's translation
	team for de, es, fr, it, ja, ko, sv, zh_CN, zh_HK and zh_TW.

2004-03-16  Paolo Borelli  <pborelli@katamail.com>

	* configure.in: 
	* README: bump version to 2.5.92

	* NEWS: updated

2004-03-14  Thomas Vander Stichele <thomas at apestaart dot org>

	* configure.in: use ACLOCAL_AMFLAGS to make maintainer builds work

2004-03-08  Paolo Maggi  <paolo.maggi@polito.it>

	* configure.in: 
	* README: bump version to 2.5.91

	* NEWS: updated

2004-03-04  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "pa" for Punjabi in ALL_LINGUAS.

2004-03-04  Glynn Foster  <glynn.foster@sun.com>

	* pixmaps/Makefile.am: Don't list pixmaps in SOURCES. Fixes #135824.

2004-03-01 Breda McColgan <breda.mccolgan@sun.com>

	* help/C/gedit.xml: Updated for GNOME 2.6, technical review draft
	* help/C/gedit-C.omf: Updated for GNOME 2.6
	* help/C/l10n.txt: Updated for GNOME 2.6
	* help/C/figures/gedit_window.png: Updated for GNOME 2.6
	* help/C/figures/gedit_format_bold.png: Added for GNOME 2.6
	* help/C/figures/gedit_format_italic.png: Added for GNOME 2.6
	* help/C/figures/gedit_format_strikethrough.png: Added for GNOME 2.6
	* help/C/figures/gedit_format_underline.png: Added for GNOME 2.6

2004-02-25  Paolo Maggi  <paolo.maggi@polito.it>

	* AUTHORS: added Paolo Borelli

2004-02-24  Paolo Maggi  <paolo.maggi@polito.it> 
