@@ -165,6 +165,7 @@ gedit/dialogs/Makefile
 gedit/recent-files/Makefile
 pixmaps/Makefile
 plugins/Makefile
+plugins/changecase/Makefile
 plugins/spell/Makefile
 plugins/docinfo/Makefile
 plugins/sample/Makefile
