@@ -1,5 +1,5 @@
-DIST_SUBDIRS = docinfo sample time spell indent taglist shell_output sort
+DIST_SUBDIRS = changecase docinfo sample time spell indent taglist shell_output sort
 
-SUBDIRS =  docinfo sample time indent taglist shell_output sort $(SPELL_PLUGIN_DIR)
+SUBDIRS = changecase docinfo sample time indent taglist shell_output sort $(SPELL_PLUGIN_DIR)
 
 EXTRA_DIST = ChangeLog
