@@ -1,0 +1,24 @@
+# Change Case plugin
+plugindir = $(libdir)/gedit-2/plugins
+
+INCLUDES = \
+	-I$(top_srcdir) 				\
+	$(GEDIT_CFLAGS) 				\
+	$(WARN_CFLAGS)					\
+	$(DISABLE_DEPRECATED_CFLAGS)			\
+	-DGNOME_ICONDIR=\""$(datadir)/pixmaps"\" 			
+
+plugin_LTLIBRARIES = libchangecase.la
+
+libchangecase_la_SOURCES = changecase.c
+ibchangecase_la_LDFLAGS = $(PLUGIN_LIBTOOL_FLAGS)
+
+plugin_in_files = changecase.gedit-plugin.desktop.in
+
+%.gedit-plugin: %.gedit-plugin.desktop.in $(INTLTOOL_MERGE) $(wildcard $(top_srcdir)/po/*po) ; $(INTLTOOL_MERGE) $(top_srcdir)/po $< $@ -d -u -c $(top_builddir)/po/.intltool-merge-cache
+
+plugin_DATA = $(plugin_in_files:.gedit-plugin.desktop.in=.gedit-plugin)
+
+EXTRA_DIST = $(plugin_DATA)
+
+CLEANFILES = $(plugin_DATA)
