@@ -1,0 +1,6 @@
+[Gedit Plugin]
+Location=changecase
+_Name=Change Case
+_Description=This plugin allows to change the case of selected text.
+Author=Paolo Borelli <pborelli@katamail.com>
+Copyright=Copyright (C) 2004 Paolo Borelli
