@@ -1,3 +1,7 @@
+2004-04-05  Paolo Borelli  <pborelli@katamail.com>
+
+	* changecase/* : add a change case plugin.
+
 2004-03-27  Paolo Borelli  <pborelli@katamail.com>
 
 	* indent/indent.c (indent_cb): do not indent empty lines.
