@@ -1,3 +1,7 @@
+2004-04-05  Paolo Borelli  <pborelli@katamail.com>
+
+	* configure.in: add changecase plugin to the build.
+
 2004-04-03  Samúel Jón Gunnarsson  <sammi@techattack.nu>
 
 	is.po:  Added "is" to ALL_LINGUAS
